Modify CSP img-src and add GDPR article
Updated the Content Security Policy for img-src to remove duplicate entry and added a new article about GDPR compliance.

--- a/blog.html
+++ b/blog.html
@@ -59,7 +59,7 @@
   default-src 'self';
   script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://pagead2.googlesyndication.com https://www.google-analytics.com https://embed.tawk.to;
   style-src 'self' 'unsafe-inline';
-  img-src 'self' data: https://ipfs.io https://picsum.photos https://images.seeklogo.com https://cdn.pixabay.com https://assets.sophos.com https://tpc.googlesyndication.com https://pagead2.googlesyndication.com;
+  img-src 'self' data: https://ipfs.io https://picsum.photos https://images.seeklogo.com https://cdn.pixabay.com https://cdn.pixabay.com https://assets.sophos.com https://tpc.googlesyndication.com https://pagead2.googlesyndication.com;
   frame-src https://embed.tawk.to https://googleads.g.doubleclick.net https://tpc.googlesyndication.com https://pagead2.googlesyndication.com https://securepubads.g.doubleclick.net;
   connect-src 'self' https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net https://tpc.googlesyndication.com https://securepubads.g.doubleclick.net https://stats.g.doubleclick.net;
   font-src 'self';
@@ -125,6 +125,65 @@
     </section>
 
 
+
+     <!-- New Article: GDPR — One Simple Step -->
+    <article id="gdpr-one-step">
+      <h2>How to Satisfy Multiple GDPR Requirements with One Simple Step</h2>
+      <p class="meta">Published: 2026-01-31 — Author: THQ Cyber Division</p>
+
+      <img class="hero-img" src="https://pixabay.com/images/download/secured-7336106_1280.png" alt="Data protection and privacy illustration" />
+
+      <h3>What is the GDPR</h3>
+      <p>
+        GDPR is a broad-reaching regulation designed to protect the private data of Europeans in IT systems. It covers a wide range of topics, from how and when to notify regulators about data breaches to user transparency about what data is being collected and why.
+      </p>
+
+      <h3>You’re asking the wrong question</h3>
+      <p>
+        Most companies are still asking, “Does the GDPR apply to us?” From a practical standpoint, here are a few criteria that determine who’s impacted:
+      </p>
+      <ul>
+        <li>You have customers, employees or contractors who are EU citizens or based in EU countries (the United Kingdom counts).</li>
+        <li>You do business in Europe, even if your business is located elsewhere.</li>
+        <li>You have an online presence (including your website) that’s available for Europeans to use.</li>
+      </ul>
+      <p>
+        Spending resources trying to exclude your company from GDPR isn’t the best use of time. There are business considerations beyond fines that affect partnerships, customer trust, and market access.
+      </p>
+
+      <h3>Non-Compliance Can Be Crushing</h3>
+      <p>
+        A single data breach can result in a fine of €20 million or up to 4% of annual turnover, whichever is greater. Fines aside, breaches create reputational damage, legal fees, and remediation costs that can be far more harmful to a business.
+      </p>
+
+      <h3>SSL is an Essential Part of GDPR Compliance</h3>
+      <p>
+        While GDPR doesn’t explicitly mandate SSL certificates, it requires technical and organisational measures to ensure security. Article 32 highlights the need for encryption and measures that ensure confidentiality and integrity of personal data.
+      </p>
+      <p>
+        If your site collects or stores user information, you are responsible for keeping that data secure — including encrypting personal data in transit. Many reported breaches involve unencrypted or poorly protected data; using TLS/SSL reduces the risk that intercepted data can be abused.
+      </p>
+
+      <h3>SSL Delivers Other Business Benefits</h3>
+      <ul>
+        <li><strong>Faster website performance:</strong> TLS enables HTTP/2, improving page load times and user experience.</li>
+        <li><strong>Search engine visibility:</strong> HTTPS is a ranking signal in search engines and can boost traffic.</li>
+        <li><strong>Mobile feature support:</strong> Modern browser features often require secure contexts (HTTPS).</li>
+        <li><strong>Increased conversions:</strong> Visitors are more likely to complete transactions when a site presents strong security indicators.</li>
+        <li><strong>Phishing resistance:</strong> Strong validation processes (e.g., OV/EV certificates) make impersonation harder for attackers.</li>
+      </ul>
+
+      <h3>Check SSL Off Your GDPR Compliance To‑do List</h3>
+      <p>
+        Ensuring all website pages use TLS/SSL for authentication and encryption is a practical, high-impact step toward meeting GDPR’s security expectations. Even organisations not fully subject to GDPR benefit from stronger data protection and improved customer trust.
+      </p>
+
+      <div class="share">
+        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thqcyberdivision.github.io/blog.html#gdpr-one-step" target="_blank" rel="noreferrer noopener">Share on LinkedIn</a>
+        <a href="https://twitter.com/intent/tweet?text=How%20to%20Satisfy%20Multiple%20GDPR%20Requirements%20with%20One%20Simple%20Step&url=https://thqcyberdivision.github.io/blog.html#gdpr-one-step" target="_blank" rel="noreferrer noopener">Share on Twitter</a>
+        <a class="cta" href="services.html">Review Certificate & Compliance Services</a>
+      </div>
+    </article>   
 <!-- Article: Introducing Upcoming Security Products — DigiCert Code Signing, Email Security & WAF Solutions -->
 <article id="upcoming-security-products">
   <h2>Introducing New Security Products: DigiCert Code Signing, Email Protection & Web Application Firewall (WAF)</h2>
@@ -357,64 +416,7 @@
       </div>
     </article>
 
-    <!-- New Article: GDPR — One Simple Step -->
-    <article id="gdpr-one-step">
-      <h2>How to Satisfy Multiple GDPR Requirements with One Simple Step</h2>
-      <p class="meta">Published: 2026-01-31 — Author: THQ Cyber Division</p>
 
-      <img class="hero-img" src="https://cdn.pixabay.com/photo/2016/11/29/09/32/laptop-1867751_960_720.jpg" alt="Data protection and privacy illustration" />
-
-      <h3>What is the GDPR</h3>
-      <p>
-        GDPR is a broad-reaching regulation designed to protect the private data of Europeans in IT systems. It covers a wide range of topics, from how and when to notify regulators about data breaches to user transparency about what data is being collected and why.
-      </p>
-
-      <h3>You’re asking the wrong question</h3>
-      <p>
-        Most companies are still asking, “Does the GDPR apply to us?” From a practical standpoint, here are a few criteria that determine who’s impacted:
-      </p>
-      <ul>
-        <li>You have customers, employees or contractors who are EU citizens or based in EU countries (the United Kingdom counts).</li>
-        <li>You do business in Europe, even if your business is located elsewhere.</li>
-        <li>You have an online presence (including your website) that’s available for Europeans to use.</li>
-      </ul>
-      <p>
-        Spending resources trying to exclude your company from GDPR isn’t the best use of time. There are business considerations beyond fines that affect partnerships, customer trust, and market access.
-      </p>
-
-      <h3>Non-Compliance Can Be Crushing</h3>
-      <p>
-        A single data breach can result in a fine of €20 million or up to 4% of annual turnover, whichever is greater. Fines aside, breaches create reputational damage, legal fees, and remediation costs that can be far more harmful to a business.
-      </p>
-
-      <h3>SSL is an Essential Part of GDPR Compliance</h3>
-      <p>
-        While GDPR doesn’t explicitly mandate SSL certificates, it requires technical and organisational measures to ensure security. Article 32 highlights the need for encryption and measures that ensure confidentiality and integrity of personal data.
-      </p>
-      <p>
-        If your site collects or stores user information, you are responsible for keeping that data secure — including encrypting personal data in transit. Many reported breaches involve unencrypted or poorly protected data; using TLS/SSL reduces the risk that intercepted data can be abused.
-      </p>
-
-      <h3>SSL Delivers Other Business Benefits</h3>
-      <ul>
-        <li><strong>Faster website performance:</strong> TLS enables HTTP/2, improving page load times and user experience.</li>
-        <li><strong>Search engine visibility:</strong> HTTPS is a ranking signal in search engines and can boost traffic.</li>
-        <li><strong>Mobile feature support:</strong> Modern browser features often require secure contexts (HTTPS).</li>
-        <li><strong>Increased conversions:</strong> Visitors are more likely to complete transactions when a site presents strong security indicators.</li>
-        <li><strong>Phishing resistance:</strong> Strong validation processes (e.g., OV/EV certificates) make impersonation harder for attackers.</li>
-      </ul>
-
-      <h3>Check SSL Off Your GDPR Compliance To‑do List</h3>
-      <p>
-        Ensuring all website pages use TLS/SSL for authentication and encryption is a practical, high-impact step toward meeting GDPR’s security expectations. Even organisations not fully subject to GDPR benefit from stronger data protection and improved customer trust.
-      </p>
-
-      <div class="share">
-        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thqcyberdivision.github.io/blog.html#gdpr-one-step" target="_blank" rel="noreferrer noopener">Share on LinkedIn</a>
-        <a href="https://twitter.com/intent/tweet?text=How%20to%20Satisfy%20Multiple%20GDPR%20Requirements%20with%20One%20Simple%20Step&url=https://thqcyberdivision.github.io/blog.html#gdpr-one-step" target="_blank" rel="noreferrer noopener">Share on Twitter</a>
-        <a class="cta" href="services.html">Review Certificate & Compliance Services</a>
-      </div>
-    </article>
 
   </main>
 
