Change hero image in GDPR article
Updated the hero image source for GDPR article.

--- a/blog.html
+++ b/blog.html
@@ -131,7 +131,7 @@
       <h2>How to Satisfy Multiple GDPR Requirements with One Simple Step</h2>
       <p class="meta">Published: 2026-01-31 — Author: THQ Cyber Division</p>
 
-      <img class="hero-img" src="https://pixabay.com/images/download/secured-7336106_1280.png" alt="Data protection and privacy illustration" />
+      <img class="hero-img" src="https://cdn.pixabay.com/photo/2018/05/20/10/16/privacy-policy-3415416_1280.jpg" alt="Data protection and privacy illustration" />
 
       <h3>What is the GDPR</h3>
       <p>
