Update services.html with HackerGuardian details
Added description and details for HackerGuardian PCI Scan Control Center.

--- a/services.html
+++ b/services.html
@@ -328,13 +328,20 @@
   </div>
 </div>
 
-<!-- Dedicated Instance - 16 vCPU -->
+<!-- Web Security -->
 <div class="card">
   <h3>HackerGuardian PCI Scan Control Center</h3>
   <img src="http://ipfs.io/ipfs/QmWx1xqZwKgmggedEH4exyXKJwCoXFpJNsQo6DjAEPwDiE" alt="HackerGuardian PCI Scan Control Center" />
-	
+
+	<p>HackerGuardian PCI Scan Control Center provides an on-demand security auditing service and PCI Scan compliance reports.
+Gain PCI scan compliance with vulnerability scanning by a PCI Approved Scanning Vendor.
+Get ready-to-submit PCI Compliance reports for your merchant bank.
+Detailed reports identify security holes exposed by HackerGuardian's 30,000+ tests and contain actionable fix recommendations
+The PCI self-assessment questionnaire is available via an online wizard.
+Secure web-based interface allows you to schedule unlimited PCI scans per quarter on up to five servers.
   <p>Make your path to PCI compliance as simple as possible with this turn-key solution</p>
-  <span class="badge">From $249.00/yr</span>
+  
+	<span class="badge">From $249.00/yr</span>
 	<label for="os-select-8v">Plan:</label>
   <select id="os-select-8v">
     <option value="one-year">1 year</option>
