Update payment select IDs and fix HTML structure

--- a/services.html
+++ b/services.html
@@ -335,15 +335,12 @@
 
 	<p>HackerGuardian PCI Scan Control Center provides an on-demand security auditing service and PCI Scan compliance reports.
 Gain PCI scan compliance with vulnerability scanning by a PCI Approved Scanning Vendor.
-Get ready-to-submit PCI Compliance reports for your merchant bank.
-Detailed reports identify security holes exposed by HackerGuardian's 30,000+ tests and contain actionable fix recommendations
-The PCI self-assessment questionnaire is available via an online wizard.
-Secure web-based interface allows you to schedule unlimited PCI scans per quarter on up to five servers.
-  <p>Make your path to PCI compliance as simple as possible with this turn-key solution</p>
+Get ready-to-submit PCI Compliance reports for your merchant bank.</p>
+	<p>Make your path to PCI compliance as simple as possible with this turn-key solution</p>
   
 	<span class="badge">From $249.00/yr</span>
-	<label for="os-select-8v">Plan:</label>
-  <select id="os-select-8v">
+	<label for="plan-select-8v">Plan:</label>
+  <select id="plan-select-8v">
     <option value="one-year">1 year</option>
     <option value="two-years">2 years</option>
 	<option value="three-years">3 years</option>
@@ -532,7 +529,7 @@ function setupPayment(selectId, buttonId, oneyearId, twoyearId, threeyearId, bad
 // setupPayment('os-select-medium', 'payment-button-medium', 'MEDIUM-LINUX-ID', 'MEDIUM-WINDOWS-ID', 'span.badge', 335, 335 + 95, '€');
 // setupPayment('os-select-large', 'payment-button-large', 'LARGE-LINUX-ID', 'LARGE-WINDOWS-ID', 'span.badge', 647, 647 + 95, '€');
 // setupPayment('os-select-4v', 'payment-button-4v', 'DI4V-LINUX-ID', 'DI4V-WINDOWS-ID', 'span.badge', 145, 145 + 95, '$');
-setupPayment('os-select-8v', 'payment-button-8v', '5461873662', '4566127488', '4565801205', 'span.badge', 249, 435.75, 622.5, '$');
+setupPayment('plan-select-8v', 'payment-button-8v', '5461873662', '4566127488', '4565801205', 'span.badge', 249, 435.75, 622.5, '$');
 // setupPayment('os-select-16v', 'payment-button-16v', 'DI16V-LINUX-ID', 'DI16V-WINDOWS-ID', 'span.badge', 637.73, 637.73 + 95, '$');
 
 
