--- a/services.html
+++ b/services.html
@@ -83,7 +83,7 @@
   default-src 'self';
   script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://embed.tawk.to;
   style-src 'self' 'unsafe-inline';
-  img-src 'self' data: https://ipfs.io https://cdn.pixabay.com https://ballisticdomains.com https://www.knownhost.com https://www.master.cz https://images.seeklogo.com https://assets.sophos.com https:[...]
+  img-src 'self' data: https://ipfs.io https://cdn.pixabay.com https://nowpayments.io https://ballisticdomains.com https://www.knownhost.com https://www.master.cz https://images.seeklogo.com https://assets.sophos.com https:[...]
   frame-src https://embed.tawk.to;
   connect-src 'self';
   font-src 'self';
