--- a/services.html
+++ b/services.html
@@ -85,32 +85,29 @@
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
   script-src 'self' 'unsafe-inline'
-  https://www.googletagmanager.com
-  https://embed.tawk.to
-  https://*.tawk.to;
+    https://www.googletagmanager.com
+    https://embed.tawk.to
+    https://*.tawk.to;
   style-src 'self' 'unsafe-inline'
-  https://embed.tawk.to
-	https://*
-  https://*.tawk.to
-  https://cdn.tawk.to;
+    https://embed.tawk.to
+    https://*.tawk.to
+    https://cdn.tawk.to;
   img-src 'self' data: blob:
-  https://ipfs.io
-  https://cdn.pixabay.com
-  https://nowpayments.io
-  https://ballisticdomains.com
-  https://www.knownhost.com
-  https://www.master.cz
-  https://images.seeklogo.com
-  https://assets.sophos.com
-  https://*.tawk.to
-  https://cdn.tawk.to
-  https://seeklogo.com;
-
-  frame-src  https://embed.tawk.to
-  https://*.tawk.to;;
-  connect-src 'self'
-	 https://*.tawk.to
-  	wss://*.tawk.to;
+    https://ipfs.io
+    https://cdn.pixabay.com
+    https://nowpayments.io
+    https://ballisticdomains.com
+    https://www.knownhost.com
+    https://www.master.cz
+	https://seeklogo.com
+    https://images.seeklogo.com
+    https://assets.sophos.com
+    https://*.tawk.to
+    https://cdn.tawk.to
+    https://w1.tawk.to
+    https://static.tawk.to;
+  frame-src https://embed.tawk.to https://*.tawk.to;
+  connect-src 'self' https://*.tawk.to wss://*.tawk.to;
   font-src 'self';
   object-src 'none';
   base-uri 'self';
